sjengida/g2/search
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/search/src/search.c:1190:33: error: use of undeclared identifier 'rc_index_0'
if ( ( _DWORD)captured != 13 && rc_index_0[captured] == rc_index_0[path[v16].captured] ) 
                                ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/search/src/search.c:1190:57: error: use of undeclared identifier 'rc_index_0'
if ( ( _DWORD)captured != 13 && rc_index_0[captured] == rc_index_0[path[v16].captured] ) 
                                                        ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/search/src/obj/search.o] Error 1
